# prog2

MyGame/: MyGame.pro  bullet.cpp  bullet.h  enemy.cpp  enemy.h  game.cpp  game.h  health.cpp  health.h  main.cpp  player.cpp  player.h  res.qrc  score.cpp  score.h
astros/: astro.cpp  astro.hpp  astros.pro  comet.cpp  comet.hpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  planet.cpp  planet.hpp  resouces.qrc  solar-system.cpp  solar-system.hpp  star.cpp  star.hpp
avaliacaoAP/: clube.hpp  main.cpp  pessoa.cpp  pessoa.hpp  pessoa.txt  time.cpp  time.hpp
t0/: dict.cpp  dict.txt  t0.code-workspace
t1/: main.cpp  output1.txt  output2.txt  person.cpp  person.hpp  t1.code-workspace
t1/T1_files/: input1.txt  input2.txt
t2/: READ ME.txt  crypt.cpp  crypt.hpp  encrypted_message.txt  main.cpp  mensagem.txt  message_not_encrypted.txt  t2.code-workspace
t2/Encoders/: Ace.txt  Alibi.txt  Amaru.txt  Aruni.txt  Ash.txt  Bandit.txt  Blackbeard.txt  Blitz.txt  Buck.txt  Capitao.txt  Castle.txt  Caveira.txt  Clash.txt  Doc.txt  Dokkaebi.txt  Echo.txt  Ela.txt  Finka.txt  Flores.txt  Frost.txt  Fuze.txt  Glaz.txt  Goyo.txt  Gridlock.txt  Hibana.txt  IQ.txt  Iana.txt  Jackal.txt  Jager.txt  Kaid.txt  Kali.txt  Kapkan.txt  Lesion.txt  Lion.txt  Maestro.txt  Maverick.txt  Melusi.txt  Mira.txt  Montagne.txt  Mozzie.txt  (+22 more)
t3/: CMakeLists.txt  astro.cpp  astro.hpp  astro.txt  comet.cpp  comet.hpp  comet.txt  main.cpp  planet.cpp  planet.hpp  planet.txt  solar-system.cpp  solar-system.txt  star.cpp  star.hpp  star.txt  t3.code-workspace
t3/Teste/: CMakeLists.txt  Teste.cpp  Teste.h
